cpp/test/Slice/errorDetection/IllegalMetadata.ice
// Copyright (c) ZeroC, Inc.
    
[["suppress-warning"]] // okay
<<<<<<< HEAD
    
module Hello {}
    
=======
<<<<<<< Updated upstream
module Hello {}
=======

module Hello {}

>>>>>>> Stashed changes
>>>>>>> 5ab9b67d67d9af9e590bc25ecd7604eaf455ede0
[["suppress-warning"]] // error
